Struktur gemäss Dispo erstelltt

--- a/main.tex
+++ b/main.tex
@@ -16,9 +16,17 @@
 
 \maketitle % für Disposition weglassen
 
-% Einleitung
-%\include{content/disposition}
+% Theorie
+\include{content/theorie}
 
+% Methode
+\include{content/methode}
+
+% Ergebnisse
+\include{content/ergebnisse}
+
+% Diskussion
+\include{content/diskussion}
 
 % Literaturverzeichnis
 \begin{flushleft}
