new lib entries, hypothesis taken from dispo, question from dispo

--- a/content/theorie.tex
+++ b/content/theorie.tex
@@ -1,5 +1,13 @@
 \section{Theorie}
 \subsection{Ausgangslage}
+\begin{itemize}
+    \item Auf die Brochüren eingehen, die Mediennutzung und Kinder als Thema haben.
+    \begin{itemize}
+        \item \cite{unknown2017}
+        \item \cite{MariaLuisaNuesch2017}
+        \item \cite{Elternbildung2017}
+    \end{itemize}
+\end{itemize}
 \subsubsection{TBD Subsubsection}
 \subsection{Hintergrund, Begründung und Ziel der Studie}
 \subsection{Aufbau der Arbeit}
@@ -7,3 +15,12 @@
 \subsection{Annahmen und bisherige Forschung}
 \subsection{Forschungslücke}
 \subsection{Fragestellung und Hypothesen}
+Basierend auf dem oben beschriebenen theoretischen Hintergrund und anhand der aufgezeigten Forschungslücken erschliesst sich die im Folgenden aufgelistete Fragestellung. Basierend auf der Fragestellung wurden die Hypothesen erstellt.
+\subsubsection{Fragestellung} 
+Welchen Effekt hat der Bindungsstil und das aktuelle Stressempfinden der Eltern auf das im Beisein der Kinder praktizierte Medienverhalten? Kann zwischen diesem elterlichen Verhalten und deren subjektiven Wohlbefinden ein Zusammenhang gefunden werden?
+\subsubsection{Hypothese 1}
+Eltern mit einem sicheren Bindungsstil weisen eine geringere Mediennutzung im Beisein ihrer Kinder auf als Eltern, die einen unsicher-vermeidenden, unsicher-ambivalenten oder desorganisierten Bindungsstil aufweisen.
+\subsubsection{Hypothese 2}
+Eltern, die ein hohes Ausmass an Stress empfinden, nutzen Medien im Beisein ihrer Kinder häufiger als Eltern, die ein niedriges Ausmass an Stress aufweisen.
+\subsubsection{Hypothese 3}
+Eltern mit einem erhöhten Medienverhalten im Beisein ihrer Kinder weisen ein geringeres subjektives Wohlbefinden auf als Eltern, die ein geringeres Medienverhalten im Beisein ihrer Kinder aufweisen.
