compilable after new lib entries

--- a/content/theorie.tex
+++ b/content/theorie.tex
@@ -3,9 +3,10 @@
 \begin{itemize}
     \item Auf die Brochüren eingehen, die Mediennutzung und Kinder als Thema haben.
     \begin{itemize}
-        \item \cite{unknown2017}
+        \item \cite{Weber2017}
         \item \cite{MariaLuisaNuesch2017}
         \item \cite{Elternbildung2017}
+        \item BLIKK-Medien Studie eingehen (in print) -> Fütter- und Einschlafstörung des Säuglings, wenn die Mutter während der SäuglingsBetreuung parallel digitale Medien nutzt Hinweise auf Bindungsstörung
     \end{itemize}
 \end{itemize}
 \subsubsection{TBD Subsubsection}
