--- a/content/theorie.tex
+++ b/content/theorie.tex
@@ -6,7 +6,7 @@
         \item \cite{Weber2017}
         \item \cite{MariaLuisaNuesch2017}
         \item \cite{Elternbildung2017}
-        \item BLIKK-Medien Studie eingehen (in print) -> Fütter- und Einschlafstörung des Säuglings, wenn die Mutter während der SäuglingsBetreuung parallel digitale Medien nutzt Hinweise auf Bindungsstörung
+        \item BLIKK-Medien Studie eingehen (in print) -> Fütter- und Einschlafstörung des Säuglings, wenn die Mutter während der SäuglingsBetreuung parallel digitale Medien nutzt -> Hinweise auf Bindungsstörung
     \end{itemize}
 \end{itemize}
 \subsubsection{TBD Subsubsection}
