--- a/main.tex
+++ b/main.tex
@@ -1,12 +1,13 @@
 \include{header}
 
 
-\title{Disposition Masterarbeit 2018}
-\shorttitle{Mediennutzung der Eltern im Beisein ihrer Kinder}
+\title{Elternsein im Medienzeitalter? \\
+Bindungsstil, Stress und Wohlbefinden - Faktoren des Medienverhaltens von Eltern 0-1 Jahre alter Kinder.}
+\shorttitle{Masterarbeit Medienverhalten von Eltern 2018}
 \author{Till J. Ernst}
 \affiliation{ZHAW Angewandte Psychologie}
 
-\include{content/abstract}
+\include{content/0_abstract.tex}
 
 \begin{document}
 
@@ -14,17 +15,42 @@
 %PDF Vorlageblat
 %\includepdf{pdf/Masterarbeit_Disposition_ERNST_Till_flat.pdf}
 
-\maketitle % für Disposition weglassen
+%\maketitle % für Disposition weglassen
 
-% Einleitung
-%\include{content/disposition}
+% Inhaltsverzeichnis
 
+% Abbildungsverzeichnis? nicht nach DGP
+
+% Tabellenverzeichnis? nicht nach DGP
+
+% Abkürzungsverzeichnis? nicht nach DGP
+
+% Theorie
+\section{Theorie}\label{sec:Theorie}
+\input{content/1_theorie.tex}
+
+% Methode
+\section{Methode}\label{sec:Methode}
+\input{content/2_methode.tex}
+
+% Ergebnisse
+\section{Ergebnisse}\label{sec:Ergebnisse}
+\input{content/3_ergebnisse.tex}
+
+% Diskussion
+\section{Diskussion}\label{sec:Diskussion}
+\input{content/4_diskussion.tex}
 
 % Literaturverzeichnis
 \begin{flushleft}
-\nocite{*}
+\nocite{}
 \bibliography{library}{}
 \end{flushleft}
+
+% Anhang
+
+% Ehrenwörtliche Erklärung
+
 \end{document}
 
 %
