make document ready to work with

--- a/content/1_theorie.tex
+++ b/content/1_theorie.tex
@@ -1,4 +1,11 @@
-\section{Theorie}
+TBD: Text
+
+\begin{itemize}
+    \item Aktueller Stand der Forschung im Gebiet der Untersuchung
+    \item Fragestellung(en)
+    \item Psychologische Relevanz der Fragestellung(en)
+\end{itemize}
+
 \subsection{Ausgangslage}
 \begin{itemize}
     \item Auf die Brochüren eingehen, die Mediennutzung und Kinder als Thema haben.
@@ -9,13 +16,16 @@
         \item BLIKK-Medien Studie eingehen (in print) -> Fütter- und Einschlafstörung des Säuglings, wenn die Mutter während der SäuglingsBetreuung parallel digitale Medien nutzt -> Hinweise auf Bindungsstörung
     \end{itemize}
 \end{itemize}
-\subsubsection{TBD Subsubsection}
+
+
 \subsection{Hintergrund, Begründung und Ziel der Studie}
 \subsection{Aufbau der Arbeit}
 \subsection{Theoretische Ansätze}
 \subsection{Annahmen und bisherige Forschung}
 \subsection{Forschungslücke}
-\subsection{Fragestellung und Hypothesen}
+
+% ---------------------------------------
+\subsection{Fragestellung und Hypothesen} \label{sec:Fragestellung}
 Basierend auf dem oben beschriebenen theoretischen Hintergrund und anhand der aufgezeigten Forschungslücken erschliesst sich die im Folgenden aufgelistete Fragestellung. Basierend auf der Fragestellung wurden die Hypothesen erstellt.
 \subsubsection{Fragestellung} 
 Welchen Effekt hat der Bindungsstil und das aktuelle Stressempfinden der Eltern auf das im Beisein der Kinder praktizierte Medienverhalten? Kann zwischen diesem elterlichen Verhalten und deren subjektiven Wohlbefinden ein Zusammenhang gefunden werden?
@@ -25,3 +35,4 @@ Eltern mit einem sicheren Bindungsstil weisen eine geringere Mediennutzung im Be
 Eltern, die ein hohes Ausmass an Stress empfinden, nutzen Medien im Beisein ihrer Kinder häufiger als Eltern, die ein niedriges Ausmass an Stress aufweisen.
 \subsubsection{Hypothese 3}
 Eltern mit einem erhöhten Medienverhalten im Beisein ihrer Kinder weisen ein geringeres subjektives Wohlbefinden auf als Eltern, die ein geringeres Medienverhalten im Beisein ihrer Kinder aufweisen.
+
