--- a/content/2_methode.tex
+++ b/content/2_methode.tex
@@ -1,5 +1,6 @@
-\section{Methode}
-\subsection{Design}
+% ---------------------------------------
+\subsection{Design} \label{sec:Design}
+
 \subsection{Versuchsablauf}
 \subsection{Stichprobe}
 \subsection{Operationalisierung der Konstrukte}
