Prepare doc with sections, inahltsverzeichnis, tabellenverzeichnis, abbildungsberzeichnis und abkürzungen

--- a/header.tex
+++ b/header.tex
@@ -14,6 +14,7 @@
 \usepackage[colorinlistoftodos]{todonotes}
 \usepackage{pdfpages}
 \usepackage[]{ragged2e}
+\usepackage{glossaries}
 
 % Für Verweise innerhalb Doc (siehe https://strobelstefan.org/?p=145) -> funktioniert nicht mich package hyperref!
 %------------------------------------------------
