--- a/content/1_theorie.tex
+++ b/content/1_theorie.tex
@@ -1,11 +1,6 @@
 TBD: Text
-
-\begin{itemize}
-    \item Aktueller Stand der Forschung im Gebiet der Untersuchung
-    \item Fragestellung(en)
-    \item Psychologische Relevanz der Fragestellung(en)
-\end{itemize}
-
+First use: \gls{svm}. Second use: \gls{svm}. \gls{swb}
+% ---------------------------------------
 \subsection{Ausgangslage}
 \begin{itemize}
     \item Auf die Brochüren eingehen, die Mediennutzung und Kinder als Thema haben.
@@ -16,13 +11,22 @@ TBD: Text
         \item BLIKK-Medien Studie eingehen (in print) -> Fütter- und Einschlafstörung des Säuglings, wenn die Mutter während der SäuglingsBetreuung parallel digitale Medien nutzt -> Hinweise auf Bindungsstörung
     \end{itemize}
 \end{itemize}
+\subsubsection{Hintergrund, Begründung und Ziel der Studie}
+\subsubsection{Aufbau der Arbeit}
 
-
-\subsection{Hintergrund, Begründung und Ziel der Studie}
-\subsection{Aufbau der Arbeit}
+% ---------------------------------------
 \subsection{Theoretische Ansätze}
-\subsection{Annahmen und bisherige Forschung}
-\subsection{Forschungslücke}
+\begin{itemize}
+ \item Bindung
+ \item Stress
+ \item SWB
+\end{itemize}
+Aktueller Stand der Forschung im Gebiet der Untersuchung.
+
+\subsubsection{Annahmen und bisherige Forschung}
+\subsubsection{Forschungslücke}
+\textit{Fazit aus vorhergehender theoretischen Abhandlung \& Psychologische Relevanz der Fragestellung(en)}
+
 
 % ---------------------------------------
 \subsection{Fragestellung und Hypothesen} \label{sec:Fragestellung}
