Include Abstract und Danksagung

--- a/main.tex
+++ b/main.tex
@@ -14,11 +14,24 @@ Bindungsstil, Stress und Wohlbefinden - Faktoren des Medienverhaltens von Eltern
 
 \begin{document}
 
+\pagenumbering{gobble} % -> Keine Seitenzahlen bis TOC
+
+% Danksagung
+\section*{Danksagung}\label{sec:Danksagung}
+\input{content/00_danksagung.tex}
+\newpage
+
+%Abstract
+\section*{Abstract}\label{sec:Abstract}
+\input{content/0_abstract.tex}
+\newpage
 
 %PDF Vorlageblat
 %\includepdf{pdf/Masterarbeit_Disposition_ERNST_Till_flat.pdf}
 
 %\maketitle % für Disposition weglassen
+
+
 
 % Inhaltsverzeichnis
 \setcounter{page}{1}
@@ -64,6 +77,7 @@ Bindungsstil, Stress und Wohlbefinden - Faktoren des Medienverhaltens von Eltern
 \nocite{}
 \bibliography{library}{}
 \end{flushleft}
+
 
 % Anhang
 
