--- a/content/0_abstract.tex
+++ b/content/0_abstract.tex
@@ -1,2 +1,3 @@
 %\abstract{Your abstract here.}
-\abstract{This abstract has to be done....}
+%\abstract{This abstract has to be done....}
+My abstract here...
