First draft in section Theorie: Einleitung

--- a/content/1_theorie.tex
+++ b/content/1_theorie.tex
@@ -1,5 +1,7 @@
-TBD: Text
-First use: \gls{svm}. Second use: \gls{svm}. \gls{swb}
+In den vergangenen Jahren haben die Informations- und Kommunikationstechnologien einen Wandel in unserer Gesellschaft im Bezug zu Kommunikationsstrukturen und -formen ausgelöst und diese nachhaltig verändert \cite{Hasebrink2009, Bms2013}. Dabei sind elektronische Medien allgegenwärtig und jederzeit verfügbar. Zudem sind sie aus dem beruflichen und privaten Alltag nicht mehr wegzudenken \cite{Bmfsfj2013}. Welchen Einfluss diese technischen Veränderungen auf das Alltagsleben, den sozialen Umgang in den Familien, die Konsequenzen für Eltern und deren Kinder, innerhalb der Peer-Group und im sozialen Umfeld haben, ist Gegenstand aktueller Forschung \cite{Olafsson2014}. Die rasch fortschreitende Entwicklung hat zur Folge, dass Kinder vom Säuglingsalter an von elektronischen Medien umgeben sind und diese eine grosse Rolle beim Aufwachsen von Kindern spielen \cite{Feierabend2015, Divsi2015}. Empirische Daten belegen, dass der Umgang mit mobilen Geräten für viele Familien zum Alltag der Erwachsenen sowie der Kinder unterschiedlichen Alters gehört \cite{Wagner2016}. Die Mehrheit der Kinder hat bis zum Schuleintritt bereits Kontakt mit einer Vielzahl von elektronischen Medien \cite{Feierabend2015}. Der Besitz eines eigenen Gerätes steigt mit dem Eintritt in die Schule sprunghaft an TBD Cite: (vgl. z. B. MPFS 2015, Knop et al. 2015). Eine deutschen Studie konnte belegen, dass bei den 3-Jährigen bereits jedes zehnte Kind online tätig ist \cite{Divsi2015}. 
+
+\gls{swb}
+
 % ---------------------------------------
 \subsection{Ausgangslage}
 \begin{itemize}
@@ -12,6 +14,7 @@ First use: \gls{svm}. Second use: \gls{svm}. \gls{swb}
     \end{itemize}
 \end{itemize}
 \subsubsection{Hintergrund, Begründung und Ziel der Studie}
+Zu wenig studien im Bereich kleiner Kinder \cite{Olafsson2014}
 \subsubsection{Aufbau der Arbeit}
 
 % ---------------------------------------
