--- a/main.tex
+++ b/main.tex
@@ -26,7 +26,7 @@ Bindungsstil, Stress und Wohlbefinden - Faktoren des Medienverhaltens von Eltern
 \input{content/0_abstract.tex}
 \newpage
 
-%PDF Vorlageblat
+%PDF Vorlageblatt
 %\includepdf{pdf/Masterarbeit_Disposition_ERNST_Till_flat.pdf}
 
 %\maketitle % für Disposition weglassen
