Therrie Einleitung zu 90%

--- a/content/1_theorie.tex
+++ b/content/1_theorie.tex
@@ -1,4 +1,10 @@
-In den vergangenen Jahren haben die Informations- und Kommunikationstechnologien einen Wandel in unserer Gesellschaft im Bezug zu Kommunikationsstrukturen und -formen ausgelöst und diese nachhaltig verändert \cite{Hasebrink2009, Bms2013}. Dabei sind elektronische Medien allgegenwärtig und jederzeit verfügbar. Zudem sind sie aus dem beruflichen und privaten Alltag nicht mehr wegzudenken \cite{Bmfsfj2013}. Welchen Einfluss diese technischen Veränderungen auf das Alltagsleben, den sozialen Umgang in den Familien, die Konsequenzen für Eltern und deren Kinder, innerhalb der Peer-Group und im sozialen Umfeld haben, ist Gegenstand aktueller Forschung \cite{Olafsson2014}. Die rasch fortschreitende Entwicklung hat zur Folge, dass Kinder vom Säuglingsalter an von elektronischen Medien umgeben sind und diese eine grosse Rolle beim Aufwachsen von Kindern spielen \cite{Feierabend2015, Divsi2015}. Empirische Daten belegen, dass der Umgang mit mobilen Geräten für viele Familien zum Alltag der Erwachsenen sowie der Kinder unterschiedlichen Alters gehört \cite{Wagner2016}. Die Mehrheit der Kinder hat bis zum Schuleintritt bereits Kontakt mit einer Vielzahl von elektronischen Medien \cite{Feierabend2015}. Der Besitz eines eigenen Gerätes steigt mit dem Eintritt in die Schule sprunghaft an TBD Cite: (vgl. z. B. MPFS 2015, Knop et al. 2015). Eine deutschen Studie konnte belegen, dass bei den 3-Jährigen bereits jedes zehnte Kind online tätig ist \cite{Divsi2015}. 
+In den vergangenen Jahren haben die Informations- und Kommunikationstechnologien einen Wandel in unserer Gesellschaft im Bezug zu Kommunikationsstrukturen und -formen ausgelöst und diese nachhaltig verändert \cite{Hasebrink2009, Bms2013}. Dabei sind elektronische Medien allgegenwärtig und jederzeit verfügbar. Zudem sind sie aus dem beruflichen und privaten Alltag nicht mehr wegzudenken \cite{Bmfsfj2013}. Welchen Einfluss diese technischen Veränderungen auf das Alltagsleben, den sozialen Umgang in den Familien, die Konsequenzen für Eltern und deren Kinder, innerhalb der Peer-Group und im sozialen Umfeld haben, ist Gegenstand aktueller Forschung \cite{Olafsson2014}. Die rasch fortschreitende Entwicklung hat zur Folge, dass Kinder vom Säuglingsalter an von elektronischen Medien umgeben sind und diese eine grosse Rolle beim Aufwachsen von Kindern spielen \cite{Feierabend2015, Divsi2015}. Empirische Daten belegen, dass der Umgang mit mobilen Geräten für viele Familien zum Alltag der Erwachsenen sowie der Kinder unterschiedlichen Alters gehört \cite{Wagner2016}. Die Mehrheit der Kinder hat bis zum Schuleintritt bereits Kontakt mit einer Vielzahl von elektronischen Medien \cite{Feierabend2015}, was unter anderem darauf zurückzuführen ist, dass sie in einem medial reich ausgestatteten Haushalt aufwachsen \cite{Suter2015}. Smartphone, Computer oder Laptop, Internetzugang und Fernsehgerät sind in nahezu allen Haushalten vorhanden. Der Besitz eines eigenen Gerätes steigt mit dem Eintritt in die Schule sprunghaft an \cite{Feierabend2015a}. Eine weitere Studie konnte aufzeigen, dass bei den 3-Jährigen bereits jedes zehnte Kind online tätig ist, was die Tendenz untermauert, dass immer jüngere Kinder bereits ein eigenes Smartphone besitzen \cite{Divsi2015}. 
+
+Mit dem Einzug von elektronischen Medien in den Familien wie Smartphone, Tablets und weitere, werden Eltern mit mit neuen Herausforderungen konfrontiert. Insbesondere der erleichterte Zugang zum Internet, der jederzeit und an nahezu jedem Ort möglich ist, werfen zahlreiche Fragen und Unsicherheiten auf Seiten der Eltern auf \cite{Wagner2016}. Seit der Erscheinung des Internets und der Digitalisierung taucht die Frage auf, was für Auswirkungen diese neuen Technologien auf die Benutzer haben. Immer mehr jüngere Kinder beschäftigen sich mit dem Internet und den neuen Medien \cite{Rideout2013a, Chaudron2015}, obwohl es ihnen gemäss \citeA{Lobe2011} an technischen, kritischen und sozialen Fähigkeiten mangelt. Dabei stellt sich die Frage, was für Auswirkungen neue Medien auf die Kinder haben \cite{Tomopoulos2010, Pempek2014, Livingstone2015, Masur2015, Troseth2016}. 
+
+Die meisten Umfragen zum Mediennutzungsverhalten von Kindern wurden bei Kindern im Alter zwischen 9 und 16 Jahren durchgeführt \cite{Chaudron2015}. Es scheint, als ob die Forschung im Bereich Medienumgang der Säuglinge und Kleinkinder fehlt, obwohl diese zwingend notwendig ist \cite{Olafsson2014, Konitzer2017}. Aus diesem Grund scheint es nicht verwunderlich, dass \enquote{digitale Medien und kleiner Kinder} in der Öffentlichkeit kontrovers diskutiert wird, dabei geht es primär um die Grundsatzdiskussion, ob die digitalen Medien eher nutzen oder eher schaden \cite{Divsi2015}.  
+TBD: übergang zu Sàuglingen und Medien.
+
 
 \gls{swb}
 
@@ -14,7 +20,6 @@ In den vergangenen Jahren haben die Informations- und Kommunikationstechnologien
     \end{itemize}
 \end{itemize}
 \subsubsection{Hintergrund, Begründung und Ziel der Studie}
-Zu wenig studien im Bereich kleiner Kinder \cite{Olafsson2014}
 \subsubsection{Aufbau der Arbeit}
 
 % ---------------------------------------
