--- a/header.tex
+++ b/header.tex
@@ -18,7 +18,7 @@
 
 % Für Verweise innerhalb Doc (siehe https://strobelstefan.org/?p=145) -> funktioniert nicht mich package hyperref!
 %------------------------------------------------
-\usepackage{csquotes}
+\usepackage[autostyle=true,german=quotes]{csquotes}
 \usepackage{prettyref}
 \usepackage{titleref}
 %%% Für Abschnitte %%%
