--- a/library.bib
+++ b/library.bib
@@ -1,7 +1,17 @@
+@book{Feierabend2015a,
+address = {Stuttgart},
+author = {Feierabend, Sabine and Plankenhorn, Theresa and Rathgeb, Thomas},
+file = {:Users/gratch/Google Drive/ZHAW{\_}Psy{\_}MSc/Z AF4 u AF5 - Masterarbeit - HS17$\backslash$:FS18/LiteraturRecherche/JIM{\_}Studie{\_}2015.pdf:pdf},
+keywords = {Feierabend2015a},
+publisher = {Medienp{\"{a}}dagogischer Forschungsverbund S{\"{u}}dwest (LFK, LMK)},
+title = {{JIM 2015. Jugend, Information, (Multi-) Media. Basisstudie zum Medienumgang 12- bis 19-J{\"{a}}hriger in Deutschland.}},
+year = {2015}
+}
 @book{Divsi2015,
 address = {Hamburg},
-author = {{Deutsches Institut f{\"{u}}r Vertrauen und Sicherheit im Internet}},
+author = {DIVSI},
 file = {:Users/gratch/Google Drive/ZHAW{\_}Psy{\_}MSc/Z AF4 u AF5 - Masterarbeit - HS17$\backslash$:FS18/LiteraturRecherche/U9-Studie-DIVSI-web.pdf:pdf},
+publisher = {Deutsches Institut f{\"{u}}r Vertrauen und Sicherheit im Internet},
 title = {{DIVSI U9-Studie. Kinder in der digitalen Welt.}},
 year = {2015}
 }
@@ -956,6 +966,17 @@ title = {{Behavioral correlates of maternal depressive symptomatology in conduct
 volume = {57},
 year = {1989}
 }
+@article{Bodenmann2000a,
+author = {Bodenmann, Guy and Cina, Annette},
+file = {:Users/gratch/Library/Application Support/Mendeley Desktop/Downloaded/Bodenmann, Cina - 2000 - Stress und Coping als Pr{\"{a}}diktoren f{\"{u}}r Scheidung eine prospektive F{\"{u}}nf-Jahre-L{\"{a}}ngsschnittstudie.pdf:pdf},
+journal = {Zeitschrift f{\"{u}}r Familienforschung},
+keywords = {dyadisches coping,individuelles coping,partnerschaft,schei,stress},
+number = {2},
+pages = {5--20},
+title = {{Stress und Coping als Pr{\"{a}}diktoren f{\"{u}}r Scheidung : eine prospektive F{\"{u}}nf-Jahre-L{\"{a}}ngsschnittstudie}},
+volume = {12},
+year = {2000}
+}
 @article{Abidin1992,
 abstract = {Explored factors that influence parenting behavior through examination of previously reported and more recently developed models for predicting parenting behavior. Patterson's behavioral model, Abidin's initial model of parenting stress, and Belsky's process model of determinants of parenting are reviewed. A proposed model is presented to improve on previous models by integrating sociological, environmental, and behavioral factors, as well as personality characteristics of the parent, in predicting parenting behavior. Finally, description is provided on a new self-report measure (i.e., the Parenting Alliance Inventory) developed to focus on those aspects of the marital relationship that bear directly on parenting. Implications for future research are presented.},
 author = {Abidin, Richard R.},
@@ -968,17 +989,6 @@ pages = {407--412},
 title = {{The Determinants of Parenting Behavior}},
 volume = {21},
 year = {1992}
-}
-@article{Bodenmann2000a,
-author = {Bodenmann, Guy and Cina, Annette},
-file = {:Users/gratch/Library/Application Support/Mendeley Desktop/Downloaded/Bodenmann, Cina - 2000 - Stress und Coping als Pr{\"{a}}diktoren f{\"{u}}r Scheidung eine prospektive F{\"{u}}nf-Jahre-L{\"{a}}ngsschnittstudie.pdf:pdf},
-journal = {Zeitschrift f{\"{u}}r Familienforschung},
-keywords = {dyadisches coping,individuelles coping,partnerschaft,schei,stress},
-number = {2},
-pages = {5--20},
-title = {{Stress und Coping als Pr{\"{a}}diktoren f{\"{u}}r Scheidung : eine prospektive F{\"{u}}nf-Jahre-L{\"{a}}ngsschnittstudie}},
-volume = {12},
-year = {2000}
 }
 @article{Belsky1984,
 abstract = {This essay is based on the assumption that a long-neglected topic of socialization, the determinants of individual differences in parental functioning, is illuminated by research on the etiology of child maltreatment. Three domains of determinants are identified (personal psychological resources of parents, characteristics of the child, and contextual sources of stress and support), and a process model of competent parental functioning is offered on the basis of the analysis. The model presumes that parental functioning is multiply determined, that sources of contextual stress and support can directly affect parenting or indirectly affect parenting by first influencing individual psychological well-being, that personality influences contextual support/ stress, which feeds back to shape parenting, and that, in order of importance, the personal psychological resources of the parent are more effective in buffering the parent-child relation from stress than are contextual sources of support, which are themselves more effective than characteristics of the child. By},
@@ -1820,21 +1830,6 @@ title = {{Impact of Music, Music Lyrics, and Music Videos on Children and Youth}
 volume = {124},
 year = {2009}
 }
-@article{AmericanAcademyofPediatrics2011,
-abstract = {In 1999, the American Academy of Pediatrics (AAP) issued a policy statement addressing media use in children. The purpose of that statement was to educate parents about the effects that media--both the amount and the content--may have on children. In one part of that statement, the AAP recommended that "pediatricians should urge parents to avoid television viewing for children under the age of two years." The wording of the policy specifically discouraged media use in this age group, although it is frequently misquoted by media outlets as no media exposure in this age group. The AAP believed that there were significantly more potential negative effects of media than positive ones for this age group and, thus, advised families to thoughtfully consider media use for infants. This policy statement reaffirms the 1999 statement with respect to media use in infants and children younger than 2 years and provides updated research findings to support it. This statement addresses (1) the lack of evidence supporting educational or developmental benefits for media use by children younger than 2 years, (2) the potential adverse health and developmental effects of media use by children younger than 2 years, and (3) adverse effects of parental media use (background media) on children younger than 2 years.},
-author = {{American Academy of Pediatrics}},
-doi = {10.1542/peds.2011-1753},
-file = {:Users/gratch/Library/Application Support/Mendeley Desktop/Downloaded/American Academy of Pediatrics - 2011 - Media use by children younger than 2 years.pdf:pdf},
-issn = {1098-4275},
-journal = {Pediatrics},
-month = {nov},
-number = {5},
-pages = {1040--5},
-pmid = {22007002},
-title = {{Media use by children younger than 2 years.}},
-volume = {128},
-year = {2011}
-}
 @article{AmericanAcademyofPediatrics2011a,
 abstract = {Obesity has become a worldwide public health problem. Considerable research has shown that the media contribute to the development of child and adolescent obesity, although the exact mechanism remains unclear. Screen time may displace more active pursuits, advertising of junk food and fast food increases children's requests for those particular foods and products, snacking increases while watching TV or movies, and late-night screen time may interfere with getting adequate amounts of sleep, which is a known risk factor for obesity. Sufficient evidence exists to warrant a ban on junk-food or fast-food advertising in children's TV programming. Pediatricians need to ask 2 questions about media use at every well-child or well-adolescent visit: (1) How much screen time is being spent per day? and (2) Is there a TV set or Internet connection in the child's bedroom?},
 author = {{American Academy of Pediatrics}},
@@ -1847,6 +1842,21 @@ number = {1},
 pages = {201--8},
 pmid = {21708800},
 title = {{Children, adolescents, obesity, and the media.}},
+volume = {128},
+year = {2011}
+}
+@article{AmericanAcademyofPediatrics2011,
+abstract = {In 1999, the American Academy of Pediatrics (AAP) issued a policy statement addressing media use in children. The purpose of that statement was to educate parents about the effects that media--both the amount and the content--may have on children. In one part of that statement, the AAP recommended that "pediatricians should urge parents to avoid television viewing for children under the age of two years." The wording of the policy specifically discouraged media use in this age group, although it is frequently misquoted by media outlets as no media exposure in this age group. The AAP believed that there were significantly more potential negative effects of media than positive ones for this age group and, thus, advised families to thoughtfully consider media use for infants. This policy statement reaffirms the 1999 statement with respect to media use in infants and children younger than 2 years and provides updated research findings to support it. This statement addresses (1) the lack of evidence supporting educational or developmental benefits for media use by children younger than 2 years, (2) the potential adverse health and developmental effects of media use by children younger than 2 years, and (3) adverse effects of parental media use (background media) on children younger than 2 years.},
+author = {{American Academy of Pediatrics}},
+doi = {10.1542/peds.2011-1753},
+file = {:Users/gratch/Library/Application Support/Mendeley Desktop/Downloaded/American Academy of Pediatrics - 2011 - Media use by children younger than 2 years.pdf:pdf},
+issn = {1098-4275},
+journal = {Pediatrics},
+month = {nov},
+number = {5},
+pages = {1040--5},
+pmid = {22007002},
+title = {{Media use by children younger than 2 years.}},
 volume = {128},
 year = {2011}
 }
