--- a/content/1_theorie.tex
+++ b/content/1_theorie.tex
@@ -1,31 +1,35 @@
-In den vergangenen Jahren haben die Informations- und Kommunikationstechnologien einen Wandel in unserer Gesellschaft im Bezug zu Kommunikationsstrukturen und -formen ausgelöst und diese nachhaltig verändert \cite{Hasebrink2009, Bms2013}. Dabei sind elektronische Medien allgegenwärtig und jederzeit verfügbar. Zudem sind sie aus dem beruflichen und privaten Alltag nicht mehr wegzudenken \cite{Bmfsfj2013}. Welchen Einfluss diese technischen Veränderungen auf das Alltagsleben, den sozialen Umgang in den Familien, die Konsequenzen für Eltern und deren Kinder, innerhalb der Peer-Group und im sozialen Umfeld haben, ist Gegenstand aktueller Forschung \cite{Olafsson2014}. Die rasch fortschreitende Entwicklung hat zur Folge, dass Kinder vom Säuglingsalter an von elektronischen Medien umgeben sind und diese eine grosse Rolle beim Aufwachsen von Kindern spielen \cite{Feierabend2015, Divsi2015}. Empirische Daten belegen, dass der Umgang mit mobilen Geräten für viele Familien zum Alltag der Erwachsenen sowie der Kinder unterschiedlichen Alters gehört \cite{Wagner2016}. Die Mehrheit der Kinder hat bis zum Schuleintritt bereits Kontakt mit einer Vielzahl von elektronischen Medien \cite{Feierabend2015}, was unter anderem darauf zurückzuführen ist, dass sie in einem medial reich ausgestatteten Haushalt aufwachsen \cite{Suter2015}. Smartphone, Computer oder Laptop, Internetzugang und Fernsehgerät sind in nahezu allen Haushalten vorhanden. Der Besitz eines eigenen Gerätes steigt mit dem Eintritt in die Schule sprunghaft an \cite{Feierabend2015a}. Eine weitere Studie konnte aufzeigen, dass bei den 3-Jährigen bereits jedes zehnte Kind online tätig ist, was die Tendenz untermauert, dass immer jüngere Kinder bereits ein eigenes Smartphone besitzen \cite{Divsi2015}. 
+\subsection{TBD: Hintergrund, Begründung und Ziel der Studie}
+In den vergangenen Jahren haben die Informations- und Kommunikationstechnologien einen Wandel in unserer Gesellschaft im Bezug zu Kommunikationsstrukturen und -formen ausgelöst und diese nachhaltig verändert \cite{Hasebrink2009, Bms2013}. Dabei sind elektronische Medien allgegenwärtig und jederzeit verfügbar. Zudem sind sie aus dem beruflichen und privaten Alltag nicht mehr wegzudenken \cite{Bmfsfj2013}. Welchen Einfluss diese technischen Veränderungen auf das Alltagsleben, den sozialen Umgang in den Familien, die Konsequenzen für Eltern und deren Kinder, innerhalb der Peer-Group und im sozialen Umfeld haben, ist Gegenstand aktueller Forschung \cite{Olafsson2014}. Die rasch fortschreitende Entwicklung hat zur Folge, dass Kinder vom Säuglingsalter an von elektronischen Medien umgeben sind und diese eine grosse Rolle beim Aufwachsen von Kindern spielen \cite{Feierabend2015, Divsi2015}. Empirische Daten belegen, dass der Umgang mit mobilen Geräten für viele Familien zum Alltag der Erwachsenen sowie der Kinder unterschiedlichen Alters gehört \cite{Wagner2016}. Die Mehrheit der Kinder hat bis zum Schuleintritt bereits Kontakt mit einer Vielzahl von elektronischen Medien \cite{Feierabend2015}, was unter anderem darauf zurückzuführen ist, dass sie in einem medial reich ausgestatteten Haushalt aufwachsen \cite{Suter2015}. Smartphone, Computer oder Laptop, Internetzugang und Fernsehgerät sind in nahezu allen Haushalten vorhanden. Der Besitz eines eigenen Gerätes steigt mit dem Eintritt in die Schule sprunghaft an \cite{Feierabend2015a}. Eine weitere Studie konnte aufzeigen, dass bei den 3-Jährigen bereits jedes zehnte Kind online tätig ist, was die Tendenz untermauert, dass immer jüngere Kinder bereits ein eigenes Smartphone besitzen \cite{Divsi2015}. Aus dem amerikanischen Report \citeA{Rideout2013a} geht hervor, dass der Zugang zu mobilen Geräten (iPad) bei Kindern von 8 Jahren und jünger in Amerika gegenüber 2011 von 8\% auf 40\% im Jahre 2013 angestiegen und der Zugang zu einem Smart-Device von 52\% auf 75\% gestiegen ist. Gemäss diesem Report hatten 38\% aller Kinder unter 2 Jahren bereits ein Mobilgerät für die Nutzung von Medien benutzt (gegenüber 10\% im Jahr 2011). Studien in der EU kommen in etwa auf ähnliche Ergebnisse \cite{Holloway2013}. Sie stellten fest, dass ein Zunahmen von Internetkonsum bei Kindern unter 9 Jahren stattgefunden hat. Kinder unter 9 Jahren erfreuen sich an diversen online Aktivitäten wie Video schauen, Gamen, Informationssuche, Aufgaben erledigen 
+und mit anderen Kindern sozialisieren. Zudem konnten sie eine Zunahme bei der Verwendung von Geräten mit Touchscreen bei Kindern im Vorschulalter und Kleinkindern beobachten. Die Autoren nenne den digitalen Footprint (z.B.: Fotos auf dem Internet teilen, Blogs über die Kinder schreiben, Videos online über Facebook stellen, etc.), der bereits bei sehr kleinen Kindern vorhanden ist.
 
-Mit dem Einzug von elektronischen Medien in den Familien wie Smartphone, Tablets und weitere, werden Eltern mit mit neuen Herausforderungen konfrontiert. Insbesondere der erleichterte Zugang zum Internet, der jederzeit und an nahezu jedem Ort möglich ist, werfen zahlreiche Fragen und Unsicherheiten auf Seiten der Eltern auf \cite{Wagner2016}. Seit der Erscheinung des Internets und der Digitalisierung taucht die Frage auf, was für Auswirkungen diese neuen Technologien auf die Benutzer haben. Immer mehr jüngere Kinder beschäftigen sich mit dem Internet und den neuen Medien \cite{Rideout2013a, Chaudron2015}, obwohl es ihnen gemäss \citeA{Lobe2011} an technischen, kritischen und sozialen Fähigkeiten mangelt. Dabei stellt sich die Frage, was für Auswirkungen neue Medien auf die Kinder haben \cite{Tomopoulos2010, Pempek2014, Livingstone2015, Masur2015, Troseth2016}. 
+Mit dem Einzug von elektronischen Medien in den Familien wie Smartphone, Tablets und weitere, werden Eltern mit mit neuen Herausforderungen konfrontiert. Insbesondere der erleichterte Zugang zum Internet, der jederzeit und an nahezu jedem Ort möglich ist, werfen zahlreiche Fragen und Unsicherheiten auf Seiten der Eltern auf \cite{Wagner2016}. Seit der Erscheinung des Internets und der Digitalisierung taucht die Frage auf, was für Auswirkungen diese neuen Technologien auf die Benutzer haben. Immer mehr jüngere Kinder beschäftigen sich mit dem Internet und den neuen Medien \cite{Rideout2013a, Chaudron2015}, obwohl es ihnen gemäss \citeA{Lobe2011} an technischen, kritischen und sozialen Fähigkeiten mangelt. Dabei stellt sich die Frage, was für Auswirkungen neue Medien auf die Kinder haben \cite{Tomopoulos2010, Pempek2014, Livingstone2015, Masur2015, Troseth2016}. Der Umgang der Eltern mit digitalen Medien und wie sie diese den Kindern vermitteln wurde in der Studie von \citeA{Livingstone2015a} untersucht. Dabei stellten sie einen Effekt vom soziökonomischen Status, wie Einkommen und Bildung, auf die digitale Mediennutzung im Umgang mit ihren Kindern fest. Länderübergreifende Studien konnten Unterschiede im Verhalten der Eltern im Umgang mit digitalen Medien feststellen \cite{Helsper2013}. Die gemeinsame Nutzung von Medien zwischen Eltern und Kindern wurde unter anderem von \citeA{Livingstone2008, Nikken2014, Plowman2014, Connell2015, Vaala2015, Harrison2015} untersucht. Die Auswirkungen von Medienkonsum kann nicht abschliessend beantwortet werden. Es scheint, als ob zum Beispiel die Zeit, die Kinder vor einem Bildschirm sind, abhängig von der Interaktionsfaktoren zwischen Eltern und Kindern ist. Zudem könnte dieses Verhalten in hohem Mass von der Einstellungen der Eltern abhängen \cite{Lauricella2015}. Der direkte Vergleich von einem digitalen Medium (TV) und einem analogen (Buch) zeigte, dass sich die Kommunikation zwischen der Mutter und ihrem lesen lernenden Kind verschlechterte, während ein TV im Hintergrund lief \cite{Nathanson2011}.
 
-Die meisten Umfragen zum Mediennutzungsverhalten von Kindern wurden bei Kindern im Alter zwischen 9 und 16 Jahren durchgeführt \cite{Chaudron2015}. Es scheint, als ob die Forschung im Bereich Medienumgang der Säuglinge und Kleinkinder fehlt, obwohl diese zwingend notwendig ist \cite{Olafsson2014, Konitzer2017}. Aus diesem Grund scheint es nicht verwunderlich, dass \enquote{digitale Medien und kleiner Kinder} in der Öffentlichkeit kontrovers diskutiert wird, dabei geht es primär um die Grundsatzdiskussion, ob die digitalen Medien eher nutzen oder eher schaden \cite{Divsi2015}.  
-TBD: übergang zu Sàuglingen und Medien.
+Die meisten Studien im Bereich elektronische Medien und Kinder wurden im Alter zwischen 9 und 16 Jahren durchgeführt \cite{Chaudron2015}. Es scheint, als ob wissenschaftliche Untersuchungen im Bereich Medienumgang der Säuglinge und Kleinkinder fehlt, obwohl diese zwingend notwendig ist \cite{Olafsson2014, Konitzer2017}. Aus diesem Grund scheint es nicht verwunderlich, dass \enquote{digitale Medien und kleiner Kinder} in der Öffentlichkeit kontrovers diskutiert wird, dabei geht es primär um die Grundsatzdiskussion, ob die digitalen Medien eher nutzen oder eher schaden \cite{Divsi2015}. Durch die reduzierte Datenlage scheinen sich Experten aus unterschiedlichen Disziplinen berufen zu fühlen, ihre Expertise in der Öffentlichkeit zu verbreiten. Als Beispiel soll hier die im deutschsprachigen Raum erhältliche Brochüre \enquote{Digitale Medien als Spielverderber für Babys} von \citeA{MariaLuisaNuesch2017} dienen, welche als Sammlung unterschiedlicher Texte aus der Psychologie, der Pädagogik und der Medienfachwelt zusammengesetzt ist. 
 
-
-\gls{swb}
-
-% ---------------------------------------
-\subsection{Ausgangslage}
-\begin{itemize}
-    \item Auf die Brochüren eingehen, die Mediennutzung und Kinder als Thema haben.
+TBD: Auf diverse Theorien aus der Brochure und Zeitungen kurz eingehen und diese darstellen im Sinner des Hintergundes der Studie.
     \begin{itemize}
         \item \cite{Weber2017}
         \item \cite{MariaLuisaNuesch2017}
         \item \cite{Elternbildung2017}
         \item BLIKK-Medien Studie eingehen (in print) -> Fütter- und Einschlafstörung des Säuglings, wenn die Mutter während der SäuglingsBetreuung parallel digitale Medien nutzt -> Hinweise auf Bindungsstörung
     \end{itemize}
-\end{itemize}
-\subsubsection{Hintergrund, Begründung und Ziel der Studie}
-\subsubsection{Aufbau der Arbeit}
+    
+Es benötigt weitere Studien, die sich diesem Thema annehmen \cite{Wartella2016}. Die Frage, wie Eltern ihre Kinder bezüglich Kreativität, Lernen und Entwicklung in Bezug zum Medienkonsum prägen, ist unzureichend beantwortet und benötigt weitere Forschung \cite{AmericanAcademyofPediatrics2011,Troseth2016}. 
+    
+TBD: Begründung - Wenig Daten, Emotional geführte Diskussionen, Wissenschaftliche Arbeit und Vorgehen.
+
+TBD: Ziel der Studie.
+
+
+\gls{swb}
+
+% ---------------------------------------
+\subsection{TBD: Aufbau der Arbeit}
 
 % ---------------------------------------
 \subsection{Theoretische Ansätze}
 \begin{itemize}
- \item Bindung
+ \item Bindung und die Eltern-Kind-Beziehung 
  \item Stress
  \item SWB
 \end{itemize}
