Section Einleitung fertig.

--- a/content/glossar.tex
+++ b/content/glossar.tex
@@ -1,2 +1,2 @@
-\newacronym{swb}{SWB}{subjektive Wohlbefinden}
+\newacronym{swb}{SWB}{subjektives Wohlbefinden}
 \newacronym{svm}{SVM}{support vector machine}
