--- a/content/1_theorie.tex
+++ b/content/1_theorie.tex
@@ -4,27 +4,16 @@ und mit anderen Kindern sozialisieren. Zudem konnten sie eine Zunahme bei der Ve
 
 Mit dem Einzug von elektronischen Medien in den Familien wie Smartphone, Tablets und weitere, werden Eltern mit mit neuen Herausforderungen konfrontiert. Insbesondere der erleichterte Zugang zum Internet, der jederzeit und an nahezu jedem Ort möglich ist, werfen zahlreiche Fragen und Unsicherheiten auf Seiten der Eltern auf \cite{Wagner2016}. Seit der Erscheinung des Internets und der Digitalisierung taucht die Frage auf, was für Auswirkungen diese neuen Technologien auf die Benutzer haben. Immer mehr jüngere Kinder beschäftigen sich mit dem Internet und den neuen Medien \cite{Rideout2013a, Chaudron2015}, obwohl es ihnen gemäss \citeA{Lobe2011} an technischen, kritischen und sozialen Fähigkeiten mangelt. Dabei stellt sich die Frage, was für Auswirkungen neue Medien auf die Kinder haben \cite{Tomopoulos2010, Pempek2014, Livingstone2015, Masur2015, Troseth2016}. Der Umgang der Eltern mit digitalen Medien und wie sie diese den Kindern vermitteln wurde in der Studie von \citeA{Livingstone2015a} untersucht. Dabei stellten sie einen Effekt vom soziökonomischen Status, wie Einkommen und Bildung, auf die digitale Mediennutzung im Umgang mit ihren Kindern fest. Länderübergreifende Studien konnten Unterschiede im Verhalten der Eltern im Umgang mit digitalen Medien feststellen \cite{Helsper2013}. Die gemeinsame Nutzung von Medien zwischen Eltern und Kindern wurde unter anderem von \citeA{Livingstone2008, Nikken2014, Plowman2014, Connell2015, Vaala2015, Harrison2015} untersucht. Die Auswirkungen von Medienkonsum kann nicht abschliessend beantwortet werden. Es scheint, als ob zum Beispiel die Zeit, die Kinder vor einem Bildschirm sind, abhängig von der Interaktionsfaktoren zwischen Eltern und Kindern ist. Zudem könnte dieses Verhalten in hohem Mass von der Einstellungen der Eltern abhängen \cite{Lauricella2015}. Der direkte Vergleich von einem digitalen Medium (TV) und einem analogen (Buch) zeigte, dass sich die Kommunikation zwischen der Mutter und ihrem lesen lernenden Kind verschlechterte, während ein TV im Hintergrund lief \cite{Nathanson2011}.
 
-Die meisten Studien im Bereich elektronische Medien und Kinder wurden im Alter zwischen 9 und 16 Jahren durchgeführt \cite{Chaudron2015}. Es scheint, als ob wissenschaftliche Untersuchungen im Bereich Medienumgang der Säuglinge und Kleinkinder fehlt, obwohl diese zwingend notwendig ist \cite{Olafsson2014, Konitzer2017}. Aus diesem Grund scheint es nicht verwunderlich, dass \enquote{digitale Medien und kleiner Kinder} in der Öffentlichkeit kontrovers diskutiert wird, dabei geht es primär um die Grundsatzdiskussion, ob die digitalen Medien eher nutzen oder eher schaden \cite{Divsi2015}. Durch die reduzierte Datenlage scheinen sich Experten aus unterschiedlichen Disziplinen berufen zu fühlen, ihre Expertise in der Öffentlichkeit zu verbreiten. Als Beispiel soll hier die im deutschsprachigen Raum erhältliche Brochüre \enquote{Digitale Medien als Spielverderber für Babys} von \citeA{MariaLuisaNuesch2017} dienen, welche als Sammlung unterschiedlicher Texte aus der Psychologie, der Pädagogik und der Medienfachwelt zusammengesetzt ist. 
+Die meisten Studien im Bereich elektronische Medien und Kinder wurden im Alter zwischen 9 und 16 Jahren durchgeführt \cite{Chaudron2015}. Es scheint, als ob wissenschaftliche Untersuchungen im Bereich Medienumgang der Säuglinge und Kleinkinder fehlt, obwohl diese zwingend notwendig ist \cite{Olafsson2014, Konitzer2017}. Aus diesem Grund scheint es nicht verwunderlich, dass \enquote{digitale Medien und kleiner Kinder} in der Öffentlichkeit kontrovers diskutiert wird, dabei geht es primär um die Grundsatzdiskussion, ob die digitalen Medien eher nutzen oder eher schaden \cite{Divsi2015}. Durch die reduzierte Datenlage scheinen sich Experten aus unterschiedlichen Disziplinen berufen zu fühlen, ihre Expertise in der Öffentlichkeit zu verbreiten. Als Beispiel soll hier die im deutschsprachigen Raum erhältliche Brochüre \enquote{Digitale Medien als Spielverderber für Babys} von \citeA{MariaLuisaNuesch2017} dienen, welche als Sammlung unterschiedlicher Texte aus der Psychologie, der Pädagogik und der Medienfachwelt zusammengesetzt ist. Gemäss \citeA{Huether2017} können Fernsehgeräte oder Mobiltelefone die entscheidende Phase nach der Geburt zwischen Mutter und Kind stören, da sich die Mutter während der ersten Tage nicht genügend um ihr Kind widmen kann und dadurch die Bindungsbeziehung zwischen diesen beiden nicht gelingt. Zudem könne sich der Konsum der Bezugspersonen negativ auf die Entwicklung des sich entwickelnden Gehirns der Neugeborenen auswirken. \citeA{Kaeppeli2017} meint es sei überaus wichtig, dass stillende Mütter oder Mütter die das Kind mit der Flasche füttern, präsent sind. Das Kind spüre, wenn die Mutter nicht wirklich anwesend sei, was den Stresspegel der Kinder ansteigen lasse. Es sein deshalb wichtig, das Kind von Störquellen wie Fernseher oder Smartphone abzuschirmen. Es ist auffällig, wie oft in diesen Artikeln auf die Bindung der Eltern-Kind-Beziehung eingegangen wird. Sei dies die Bindung des Kindes an und für sich, oder die Bindung der Bezugsperson. So beschreibt \citeA{Prekop2017}, dass eine in der Bindung gestörte Bezugsperson sich gegenüber den Gefühlen für andere Menschen schützt, indem sie ihre Bindung lieber zu technischen Dingen wie Fernseher oder Computer sucht. Ein Elternmagazin aus der Schweiz schreibt in einem Artikel, dass Babys eher in zugewandte Gesichter als in abgewandte blicken. Der Blick der Eltern auf ihr Smartphone könnte somit Folgen für die Gerhirnentwicklung haben, da ein Baby den Blickkontakt für die Entwicklung eines Gefühls für sich selbst zu bekommen. Da Babys auf direkten Blickkontakt mit erhöhter Gehirnaktivität reagieren, könnte ein Nicht-Ansehen Folgen für die Entwicklung der Bindung auf die Bezugsperson haben \cite{Weber2017}. Die aktuelle Studie \citeA{Blikk2017} will einen signifikanten Zusammenhang zwischen Einschlafstörungen von Säuglingen und der Nutzung elektronischer Medien wie Fernseher oder Musik durch die Eltern während des Einschlafvorgangs der Säuglinge gefunden haben. Es benötigt weitere Studien, die sich diesem Thema annehmen \cite{Wartella2016}. Die Frage, wie Eltern ihre Kinder bezüglich Kreativität, Lernen und Entwicklung in Bezug zum Medienkonsum prägen, ist unzureichend beantwortet und benötigt weitere Forschung \cite{AmericanAcademyofPediatrics2011,Troseth2016}. 
 
-TBD: Auf diverse Theorien aus der Brochure und Zeitungen kurz eingehen und diese darstellen im Sinner des Hintergundes der Studie.
-    \begin{itemize}
-        \item \cite{Weber2017}
-        \item \cite{MariaLuisaNuesch2017}
-        \item \cite{Elternbildung2017}
-        \item BLIKK-Medien Studie eingehen (in print) -> Fütter- und Einschlafstörung des Säuglings, wenn die Mutter während der SäuglingsBetreuung parallel digitale Medien nutzt -> Hinweise auf Bindungsstörung
-    \end{itemize}
-    
-Es benötigt weitere Studien, die sich diesem Thema annehmen \cite{Wartella2016}. Die Frage, wie Eltern ihre Kinder bezüglich Kreativität, Lernen und Entwicklung in Bezug zum Medienkonsum prägen, ist unzureichend beantwortet und benötigt weitere Forschung \cite{AmericanAcademyofPediatrics2011,Troseth2016}. 
-    
-TBD: Begründung - Wenig Daten, Emotional geführte Diskussionen, Wissenschaftliche Arbeit und Vorgehen.
+Aufgrund der geringen Datenlage und der Fehlenden Studien im Medienverhalten von Säuglingen möchte diese Arbeit dazu beitragen, die laufende Diskussion mit empirischen Daten zu versorgen. Beim Lesen der Ratgeberliteratur wurde eine stark emotional angefärbte Meinungsabtausch festgestellt. Das Thema scheint medial präsent zu sein und auch im privaten Umfeld scheinen die meisten eine Position die für oder gegen dem elektronischen Medienkonsum spricht zu vertreten. Der Schwierigkeit Säuglinge direkt zu befragen will diese Arbeit begegnen, indem sie das Medienverhalten der Eltern untersucht, die einen Teil für eine gelungene Eltern-Kind-Beziehung ausmacht. Zudem konnten aktuell keine Studien gefunden werden, die Eltern im Umgang mit Medien und ihren Kindern in den Mittelpunkt der Untersuchung rückten.  
 
-TBD: Ziel der Studie.
-
-
-\gls{swb}
+Bindung scheint ein zentrales Element in der Interaktion zwischen Bezugspersonen und Säuglingen im Umgang mit Medien zu sein \cite{Prekop2017, Huether2017, Blikk2017}. Ziel der Studie ist es, einen möglichen Effekt zwischen dem Bindungsstil der Eltern und deren Medienverhalten während der Betreuung ihrer Kinder zu untersuchen. Um den Bindungsstil als ausschlaggebende Varible auf das elterliche Medienverhalten zu isolieren, soll der Stress der Eltern als moderierende Variable in die Untesuchung einfliessen. Gemäss \citeA{Mark2014} steht Stress in direktem Zusammenhang mit Multitasking, der Erledigung mehrere Aufgaben parallel. Im Rahmen der Risikofaktoren von Problemverhalten bei Kindern wird häufig vom Faktor Stress bei den Eltern gesprochen, der eng mit dem Verhalten in Erziehungssituationen gezeigt wird und über längere Zeit ungünstige Folgen für das Individuum sowohl dessen Umfeld aufweist \cite{Cina2009}. Zudem scheint Stress mit dem Bindungsstil verknüpft zu sein. Tägliche Widrigkeiten scheinen Auswirkungen auf das Erziehungsverhalten der Eltern in Form eines negativen und aversiven Bindungsstils \cite{Dumas1989, Webster-Stratton1988} und einer geringen emotionalen Verfügbarkeit für die Kinder \cite{Campbell1991} zu haben. Welche Auswirkungen das Medienverhalten auf die Eltern haben, soll mittels subjektiven Wohlbefinden  untersucht werden. Psychische, physische sowohl soziale Störungen stehen im Zusammenhang mit Stress \cite{Elfering2002, Burisch1994}. Insbesondere die engen Familienmitglieder sind oft direkt oder indirekt von den Auswirkungen des Stresses betroffen. So zeigen Studien einen Zusammenhang zwischen Stress und schlechtem psychischen Befinden \cite{Burisch1994, Krohne1997}, einer negativen Partneschaftsqualität \cite{Bodenmann2000, Bodenmann1999, Bodenmann2000a} und ungünstigem Erziehungsverhalten \cite{Abidin1992, Belsky1984, WebsterStratton2000}.
 
 % ---------------------------------------
 \subsection{TBD: Aufbau der Arbeit}
+\gls{swb}
+
 
 % ---------------------------------------
 \subsection{Theoretische Ansätze}
